--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,21 +32,13 @@
         android:layout_centerHorizontal="true" >
 
         <TextView
-            android:id="@+id/minutes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/minutes"
-            android:textSize="80sp"
-            android:textStyle="bold" />
-
-        <TextView
             android:id="@+id/seconds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/colon"
-            android:text="@string/seconds"
+            android:text="@string/_1"
             android:textSize="80sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="00" />
     </RelativeLayout>
 
     <RelativeLayout
