--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,10 +35,9 @@
             android:id="@+id/seconds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/_1"
+            android:text="@string/seconds"
             android:textSize="80sp"
-            android:textStyle="bold"
-            tools:text="00" />
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -49,11 +48,13 @@
         android:layout_centerHorizontal="true" >
 
         <Button
-            android:id="@+id/startStop"
+            android:id="@+id/setStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onStartStop"
-            android:text="@string/_1" />
+            android:onClick="onSetStop"
+            android:text="Button"
+            android:textStyle="bold" />
+
 
     </RelativeLayout>
 
